change mistake in Nav and 4th section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a class="nav-link active" href="#" title="About me">About me</a>
                     <a class="nav-link" href="#" title="Projects">Projects</a>
                     <a class="nav-link" href="#" title="Contacts">Contacts</a>
-                    <a class="nav-link" title="Hire me">Hire me</a>
+                    <a class="nav-link" href="#" title="Hire me">Hire me</a>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
                     <h5>Welcome to my porfolio</h5>
                     <div class="fs-48 fw-bold text-theme-primary mb-20">
                         <div>Hi, I am Steven</div>
-                        <div>ui/ux <span class="text-theme-orange">Designer</span></div>
+                        <div>UI/UX <span class="text-theme-orange">Designer</span></div>
                     </div>
                     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci dolorum molestiae molestias quis vel voluptatem.</div>
                     <div class="d-flex justify-content-between mt-48">
@@ -110,7 +110,7 @@
     </section>
     <section class="section-information my-160 py-160 bg-theme-light-blue bg-img bg-img-2">
         <div class="container">
-            <h2 class="text-center text-theme-primary">My projects</h2>
+            <h2 class="text-center text-theme-primary">COntact Me</h2>
             <div class="text-center mb-160">Lorem Ipsum is simply dummy text of the printing</div>
             <div class="row">
                 <div class="col-md-5">
