remove mistake in name

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </section>
     <section class="section-information my-160 py-160 bg-theme-light-blue bg-img bg-img-2">
         <div class="container">
-            <h2 class="text-center text-theme-primary">COntact Me</h2>
+            <h2 class="text-center text-theme-primary">Contact Me</h2>
             <div class="text-center mb-160">Lorem Ipsum is simply dummy text of the printing</div>
             <div class="row">
                 <div class="col-md-5">
